# discord-flag-remover

./: .example.env  Cargo.toml  README.md
src/: main.rs
