[package]
name = "discord-flag-remover"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.97"
regex = "1.11.1"
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
dotenv = "0.15.0"
twilight-http-ratelimiting = "0.16.0"
